Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6518

Unhandled possible allocation failure in lustre_start_mgc

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.9.0
    • None
    • 3
    • 9223372036854775807

      Smatch highlighted this in lustre_start_mgc:

              /* Random uuid for MGC allows easier reconnects */
              OBD_ALLOC_PTR(uuid);
              ll_generate_random_uuid(uuidc);
              class_uuid_unparse(uuidc, uuid);
      
              /* Start the MGC */
              rc = lustre_start_simple(mgcname, LUSTRE_MGC_NAME,
                                       (char *)uuid->uuid, LUSTRE_MGS_OBDNAME,
                                       niduuid, NULL, NULL);
              OBD_FREE_PTR(uuid);
      

            wc-triage WC Triage
            green Oleg Drokin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: