LU-6518 obd: Unhandled possible allocation failure in lustre_start_mgc

Patch to handle un-handled possible allocation failure
of struct obd_uuid.

Change-Id: Ib19d4c53a6dae5e2f6a80e0fdf755fa7aac81fd1
Signed-off-by: Parinay Kondekar <parinay.kondekar@seagate.com>
Reviewed-on: http://review.whamcloud.com/17493
Tested-by: Jenkins
Reviewed-by: Dmitry Eremin <dmitry.eremin@intel.com>
Reviewed-by: Frank Zago <fzago@cray.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>